--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "event-management-platform",
+  "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,40 +7,45 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "node server.js"
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@headlessui/react": "^1.7.19",
     "@hookform/resolvers": "^3.3.4",
-    "axios": "^1.6.7",
-    "bcrypt": "^5.1.1",
-    "clsx": "^2.1.0",
-    "date-fns": "^3.3.1",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
+    "@mui/x-date-pickers": "^6.18.4",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "chart.js": "^4.4.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^2.30.0",
+    "firebase": "^10.14.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
-    "pg": "^8.13.1",
+    "openai": "^4.28.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
-    "react-router-dom": "^6.22.3",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.22.1",
+    "socket.io-client": "^4.7.4",
+    "sonner": "^1.7.0",
+    "tailwind-merge": "^2.5.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "@types/bcrypt": "^5.0.2",
+    "@types/leaflet": "^1.9.8",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
   }
 }
