--- a/package.json
+++ b/package.json
@@ -1,51 +1,30 @@
 {
-  "name": "vite-react-typescript-starter",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
-    "@headlessui/react": "^1.7.19",
-    "@hookform/resolvers": "^3.3.4",
-    "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
-    "@mui/x-date-pickers": "^6.18.4",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "chart.js": "^4.4.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^2.30.0",
-    "firebase": "^10.14.1",
-    "leaflet": "^1.9.4",
-    "lucide-react": "^0.344.0",
-    "openai": "^4.28.0",
-    "react": "^18.3.1",
-    "react-chartjs-2": "^5.2.0",
-    "react-day-picker": "^8.10.0",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.51.0",
-    "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.22.1",
-    "socket.io-client": "^4.7.4",
-    "sonner": "^1.7.0",
-    "tailwind-merge": "^2.5.5",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@types/leaflet": "^1.9.8",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
-    "vite": "^5.4.2"
-  }
+      "name": "care-connect",
+      "private": true,
+      "version": "0.0.0",
+      "type": "module",
+      "scripts": {
+            "dev": "vite"
+      },
+      "dependencies": {
+            "date-fns": "^4.1.0",
+            "firebase": "^9.23.0",
+            "lucide-react": "^0.469.0",
+            "react": "^18.2.0",
+            "react-dom": "^18.2.0",
+            "react-firebase-hooks": "^5.1.1",
+            "react-hot-toast": "^2.4.1",
+            "react-router-dom": "^6.28.1"
+      },
+      "devDependencies": {
+            "@types/react": "^18.0.28",
+            "@types/react-dom": "^18.0.11",
+            "@vitejs/plugin-react": "^3.1.0",
+            "autoprefixer": "^10.4.20",
+            "postcss": "^8.4.49",
+            "tailwindcss": "^3.4.17",
+            "ts-node": "^10.9.2",
+            "typescript": "^5.0.2",
+            "vite": "^4.2.0"
+      }
 }
