--- a/Documents/meu-evento/v2/vercel.json
+++ b/Documents/meu-evento/v2/vercel.json
@@ -1,9 +1,48 @@
 {
   "version": 2,
-  "rewrites": [
+  "build": {
+    "env": {
+      "NEXT_PUBLIC_ASAAS_API_KEY": "@asaas_api_key"
+    }
+  },
+  "routes": [
+    {
+      "src": "/assets/(.*)",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      },
+      "continue": true
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    },
+    {
+      "src": "/api/asaas/(.*)",
+      "dest": "https://sandbox.asaas.com/api/v3/$1",
+      "headers": {
+        "Authorization": "Bearer $NEXT_PUBLIC_ASAAS_API_KEY",
+        "Content-Type": "application/json"
+      }
+    }
+  ],
+  "headers": [
     {
       "source": "/(.*)",
-      "destination": "/index.html"
+      "headers": [
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
+        }
+      ]
     }
   ]
 }
