--- a/package.json
+++ b/package.json
@@ -4,27 +4,40 @@
       "version": "0.0.0",
       "type": "module",
       "scripts": {
-            "dev": "vite"
+            "dev": "vite",
+            "build": "vite build",
+            "preview": "vite preview"
       },
       "dependencies": {
+            "@chakra-ui/react": "^3.2.3",
+            "@emotion/react": "^11.14.0",
+            "@emotion/styled": "^11.14.0",
+            "@heroicons/react": "^2.2.0",
+            "@types/react-datepicker": "^6.2.0",
+            "axios": "^1.7.9",
             "date-fns": "^4.1.0",
-            "firebase": "^9.23.0",
+            "firebase": "^11.1.0",
+            "framer-motion": "^11.15.0",
             "lucide-react": "^0.469.0",
+            "process": "^0.11.10",
             "react": "^18.2.0",
+            "react-datepicker": "^7.5.0",
             "react-dom": "^18.2.0",
             "react-firebase-hooks": "^5.1.1",
+            "react-hook-form": "^7.54.2",
             "react-hot-toast": "^2.4.1",
             "react-router-dom": "^6.28.1"
       },
       "devDependencies": {
-            "@types/react": "^18.0.28",
-            "@types/react-dom": "^18.0.11",
+            "@types/node": "^22.10.2",
+            "@types/react": "^18.3.18",
+            "@types/react-dom": "^18.3.5",
             "@vitejs/plugin-react": "^3.1.0",
             "autoprefixer": "^10.4.20",
             "postcss": "^8.4.49",
             "tailwindcss": "^3.4.17",
             "ts-node": "^10.9.2",
-            "typescript": "^5.0.2",
+            "typescript": "^5.7.2",
             "vite": "^4.2.0"
       }
 }
